[project]
name = "2026-p1-wency-wang-0629"
version = "0.1.0"
description = ""
authors = [
    {name = "Wency-Wang-0629",email = "wenchang.wang1@student.uq.edu.au"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
